--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,4 +6,19 @@
   background-color: rgb(184, 183, 183);
   text-align: center;
   cursor: pointer;
+  display: inline-flex;
+  margin: 10px 20px;
+  padding: 5px 20px;
+  justify-content: center;
+}
+
+#cards {
+  margin: 30px 20px 0px 20px;
+}
+
+.card {
+  background-color: aqua;
+}
+
+#cardsHeader {
 }
