--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,11 @@
 #today {
   border: 2px solid black;
   display: none;
+  background-color: aqua;
+  
 }
+
+
 
 .element {
   background-color: rgb(184, 183, 183);
@@ -15,7 +19,7 @@
 }
 
 #cards {
-  margin: 15px 20px 0px 20px;
+  margin: 10px 30px 0px 10px;
 }
 
 .card {
@@ -30,4 +34,19 @@
 #searchHeader {
   margin: 16px 20px 0 45px;
   display: none;
+}
+
+@media screen and (max-width: 768px) {
+  #cards {
+    flex-direction: column;
+  }
+  #searchCity {
+    flex-direction: column;
+
+  }
+  .card {
+    margin-bottom: 20px;
+    width: 95%;
+    
+  }
 }
